fix: :lipstick: line break was broken on mobile

--- a/styles/dist.css
+++ b/styles/dist.css
@@ -1594,6 +1594,10 @@ video {
   word-break: normal;
 }
 
+.break-words {
+  overflow-wrap: break-word;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
